--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yoganand's Personal Site</title>
+    <link rel="icon" href="MY PROFILE-modified.png" type="image/icon type">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -24,6 +26,12 @@
         </td>
     </table>
     <hr>
+
+    <h2>Personal Details</h2>
+    <p>Date of Birth : 02-10-2003</p>
+    <p>Languages Known : English, Hindi, and Telugu</p>
+    <hr>
+
     <h2>Academic Details</h2>
     <table cellspacing="10">
         <thead>
@@ -77,6 +85,17 @@
     </ul>
     <hr>
 
+    <h2>Academic Project</h2>
+    <p>
+    <h4>Food Ordering Website : Orderit</h4>
+    Software Used: Html, Css, Javascript, Firebase, Web designing <br>
+    Pricipal Objective of Website : Providing Online food service based on preffered location and providing part time
+    jobs for unemployed. <br><br>
+    For <a href="https://www.canva.com/design/DAFX0FhJl7w/STY8datkG3d8col5jc-Q-w/edit"> <button> More details
+    </button></a> Click here
+    </p>
+    <hr>
+
     <h2>Area of Intrests</h2>
     <ul>
         <li>Travelling</li>
@@ -86,59 +105,67 @@
         <li>Movies</li>
     </ul>
     <hr>
-    
     <h2>Skills</h2>
-    <ul>       
-    <table> 
-        <tr>
-            <td>Skills</td>
-            <th>
-                <td>Rating</td>
-            </th>
-        </tr>    
-            <tr>
-                <td>
-                    <li>C++</li>
-                </td>
-                <th>
+    <ul>
+
+        <table>
+            <thead>
+                <tr>
+                    <th>Skills</th>
+                    <th>Rating</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>
+                        <li>C++</li>
+                    </td>
+
                     <td>⭐⭐⭐</td>
-                </th>
-            </tr>
-            <tr>
-                <td>
-                    <li>Web Development</li>
-                </td>
-                <th>
+
+                </tr>
+                <tr>
+                    <td>
+                        <li>Web Development</li>
+                    </td>
+
                     <td>⭐⭐⭐⭐</td>
-                </th>
-            </tr>
-            <tr>
-            </tr>
-            <tr>
-                <td>
-                    <li>Python</li>
-                </td>
-                <th>
+
+                </tr>
+                <tr>
+                </tr>
+                <tr>
+                    <td>
+                        <li>Python</li>
+                    </td>
+
                     <td>⭐⭐</td>
-                </th>
-            </tr>
-            <tr>
-                <td>
-                    <li>Photography</li>
-                </td>
-                <th>
+
+                </tr>
+                <tr>
+                    <td>
+                        <li>Photography</li>
+                    </td>
+
                     <td>⭐⭐⭐⭐</td>
-                </th>
-            </tr>
-        </ul>
-    </table>
+
+                </tr>
+            </tbody>
+
+
+        </table>
+    </ul>
     <br>
-    
-    <button>
-        <a href="Contactme.html">Contact Me</a>
-       <!-- <link rel="stylesheet" href="Contactme.html"> -->
-    </button>
-    <p>You can reach me out by <button> <a href="https://www.linkedin.com/in/jammisetti-yoganand-9a4a1521b/">Linkedin</a></button>  following the link </p>
+    <hr>
+
+    <p>You can <a href="Contactme.html">
+        <button>
+            Contact Me
+        </button></a>
+    </p>
+    <p>You can reach me out by  <a
+                href="https://www.linkedin.com/in/jammisetti-yoganand-9a4a1521b/"><button>Linkedin</button></a>following the
+        link </p>
 </body>
 
 </html>
