--- a/Contactme.html
+++ b/Contactme.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h2>My Contact Details</h2>
-    <p>Adress: <br>
+    <p>Address: <br>
         &emsp; 2-25 <br>
         &emsp; Church Street <br>
         &emsp; Kasipadu <br>
