--- a/Contactme.html
+++ b/Contactme.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Me</title>
     <link rel="icon" href="MY PROFILE-modified.png" type="image/icon type">
+    <link rel="stylesheet" href="contact.css">
 
 </head>
 <body>
@@ -28,8 +29,8 @@
         <input type="text" name="Your Name" value=""><br><br>
         <label>Your Email:</label>
         <input type="email" name="Your Email" value=""><br><br>
-        <label>Your Message:</label><br>
-        <textarea name="Your Message" id="" cols="30" rows="10"></textarea><br>
+        <label> Your Message: <br>
+        <textarea name="Your Message" id="" cols="40" rows="5"></textarea></label><br>
         <input type="submit" name="" value="submit">
         <input type="reset" name="Reset" id="">
     </form>
