--- a/index.html
+++ b/index.html
@@ -6,14 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yoganand's Personal Site</title>
-    <link rel="icon" href="MY PROFILE-modified.png" type="image/icon type">
+    <link rel="icon" href="MY PROFILE.png" type="image/icon type">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <div class="heading">
+        <h1><u>Yoganand's CV</u></h1>
+    </div>
     <table cellspacing="15">
         <tr>
-            <td><img height="250" src="MY PROFILE-modified.png" alt="Profile Photo"></td>
+            <td><img height="250" src="MY PROFILE.png" alt="Profile Photo"></td>
             <td>
                 <h1>Jammisetti Yoganand</h1>
                 <em>
@@ -92,7 +95,7 @@
     Pricipal Objective of Website : Providing Online food service based on preffered location and providing part time
     jobs for unemployed. <br><br>
     For <a href="https://www.canva.com/design/DAFX0FhJl7w/STY8datkG3d8col5jc-Q-w/edit"> <button> More details
-    </button></a> Click here
+        </button></a> Click here
     </p>
     <hr>
 
@@ -159,12 +162,12 @@
     <hr>
 
     <p>You can <a href="Contactme.html">
-        <button>
-            Contact Me
-        </button></a>
+            <button>
+                Contact Me
+            </button></a>
     </p>
-    <p>You can reach me out by  <a
-                href="https://www.linkedin.com/in/jammisetti-yoganand-9a4a1521b/"><button>Linkedin</button></a>following the
+    <p>You can reach me out by <a
+            href="https://www.linkedin.com/in/jammisetti-yoganand-9a4a1521b/"><button>Linkedin</button></a>following the
         link </p>
 </body>
 
