--- a/Contactme.html
+++ b/Contactme.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Me</title>
-    <link rel="icon" href="MY PROFILE-modified.png" type="image/icon type">
+    <link rel="icon" href="MY PROFILE.png" type="image/icon type">
     <link rel="stylesheet" href="contact.css">
 
 </head>
